--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -130,6 +130,12 @@ function getBBox_(element) {
   };
 }
 
+function showMainContent() {
+      document.getElementById('home_screen').style.display = 'none';
+      document.getElementById('main_content').style.display = 'block';
+      init();
+    }
+
 /**
  * Initialize Blockly.  Called on page load.
  */
@@ -160,6 +166,11 @@ function init() {
     }
   };
   window.addEventListener('resize', onresize, false);
+  window.addEventListener('load', function() {
+      if (window.location.hash) {
+        showMainContent();
+      }
+    });
 
   var toolbox = document.getElementById('toolbox');
   Blockly.inject(document.getElementById('content_blocks'),
@@ -202,7 +213,6 @@ function init() {
     /* Tabs */
     #tabRow>td {
       border: 1px solid #ccc;
-      font-size: 13pt;
     }
     td.tabon {
       border-bottom-color: #ddd !important;
@@ -264,7 +274,7 @@ function init() {
     }
     button {
       padding: 1px 1em;
-      font-size: 13pt;
+      font-size: 90%;
       border-radius: 4px;
       border: 1px solid #ddd;
       background-color: #eee;
@@ -281,185 +291,229 @@ function init() {
     button:hover {
       box-shadow: 2px 2px 5px #888;
     }
+    #home_screen {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      background-color: #f5f5f5;
+      text-align: center;
+    }
+
+    #home_screen h1 {
+      font-size: 2em;
+      margin-bottom: 1em;
+    }
+
+    #home_screen p {
+      margin-bottom: 1em;
+      font-size: 1.2em;
+    }
+
+    #home_screen button {
+      margin: 0.5em;
+      padding: 0.5em 1em;
+      font-size: 1em;
+      cursor: pointer;
+    }
+
+    #main_content {
+      display: none;
+
+      .content {
+      height: 100%;
+      width: 100%;
+      }
+    }
   </style>
 </head>
-<body onload="init()">
-  <table height="100%" width="100%">
-    <tr>
-      <td>
-        <h1><a href="https://github.com/gasolin/BlocklyDuino/wiki">BlocklyDuino</a> &gt; web-based visual programming editor for arduino</h1>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <table width="100%">
-          <tr id="tabRow" height="1em">
-            <td id="tab_blocks" class="tabon" onclick="tabClick('blocks')">Blocks</td>
-            <td class="tabmin">&nbsp;</td>
-            <!-- td id="tab_javascript" class="taboff" onclick="tabClick(this.id)">JavaScript</td>
-            <td class="tabmin">&nbsp;</td -->
-            <!--td id="tab_dart" class="taboff" onclick="tabClick(this.id)">Dart</td>
-            <td class="tabmin">&nbsp;</td>
-            <td id="tab_python" class="taboff" onclick="tabClick(this.id)">Python</td>
-            <td class="tabmin">&nbsp;</td -->
-            <td id="tab_arduino" class="taboff" onclick="tabClick('arduino')">Arduino</td>
-            <td class="tabmin">&nbsp;</td>
-            <td id="tab_xml" class="taboff" onclick="tabClick('xml');">XML</td>
-            <td class="tabmin">&nbsp;</td>
-            <td class = "progress-container">
-                <div class="progress-bar" id="myBar"></div>
-            </td>
-            <td class="tabmax">
-              <button type="button" onclick="openHint()">Hint</button>
-              <button type="button" onclick="uploadFunctions()">Upload</button>
-              <button type="button" onclick="resetClick()">Reset</button>
-              <button onclick="discard()">Discard</button>
-              <button onclick="saveCode()">Save Arduino Code</button>
-              <button onclick="save()">Save XML</button>
-              <button id="fakeload">Load XML</button>
-              <input type="file" id="load" style="display: none;"/>
-              <!--button class="launch" onclick="runJS()">Run Program</button-->
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-    <tr>
-      <td height="99%" id="content_area"></td>
-    </tr>
-  </table>
-  <div id="content_blocks" class="content"></div>
-  <textarea id="content_arduino" class="content" readonly wrap="off"></textarea>
-  <textarea id="content_xml" class="content" wrap="off"></textarea>
+<body>
+  <div id="home_screen">
+    <h1>Welcome to BlocklyDuino</h1>
+    <p>Visual programming editor for Arduino</p>
+    <button onclick="showMainContent()">Get Started</button>
+    <button>Unused Button</button>
+  </div>
 
-  <xml id="toolbox" style="display: none">
-    <category name="Logic">
-      <block type="controls_if"></block>
-      <block type="logic_compare"></block>
-      <block type="logic_operation"></block>
-      <block type="logic_negate"></block>
-      <block type="logic_null"></block>
-    </category>
-    <category name="Control">
-      <block type="base_delay">
-        <value name="DELAY_TIME">
-          <block type="math_number">
-            <field name="NUM">1000</field>
-          </block>
-        </value>
-      </block>
-      <block type="controls_for">
-        <value name="FROM">
-          <block type="math_number">
-            <field name="NUM">1</field>
-          </block>
-        </value>
-        <value name="TO">
-          <block type="math_number">
-            <field name="NUM">10</field>
-          </block>
-        </value>
-      </block>
-      <block type="controls_whileUntil"></block>
-    </category>
-    <category name="Math">
-      <block type="math_number"></block>
-      <block type="math_arithmetic"></block>
-      <block type="base_map">
-        <value name="DMAX">
-          <block type="math_number">
-            <field name="NUM">180</field>
-          </block>
-        </value>
-      </block>
-    </category>
-    <category name="Text">
-      <block type="text"></block>
-    </category>
-    <category name="Variables" custom="VARIABLE"></category>
-    <category name="Functions" custom="PROCEDURE"></category>
-    <sep></sep>
-    <category name="Input/Output">
-      <block type="inout_highlow"></block>
-      <block type="inout_digital_write"></block>
-      <block type="inout_digital_read"></block>
-      <block type="inout_analog_write">
-        <value name="NUM">
-          <block type="math_number">
-            <field name="NUM">0</field>
-          </block>
-        </value>
-      </block>
-      <block type="inout_analog_read"></block>
-      <block type="serial_print">
-        <value name="CONTENT">
-          <block type="text">
-            <field name="TEXT"></field>
-          </block>
-        </value>
-      </block>
-      <block type="inout_tone">
-        <value name="NUM">
-          <block type="math_number">
-            <field name="NUM">440</field>
-          </block>
-        </value>
-      </block>
-      <block type="inout_notone"></block>
-      <block type="inout_buildin_led"></block>
-    </category>
-    <category name="Servo">
-      <block type="servo_move">
-        <value name="DEGREE">
-          <block type="math_number">
-            <field name="NUM">0</field>
-          </block>
-        </value>
-      </block>
-      <block type="servo_read_degrees"></block>
-    </category>
-    <category name="Grove Analog">
-      <block type="grove_rotary_angle"></block>
-      <block type="grove_temporature_sensor"></block>
-      <block type="grove_sound_sensor"></block>
-      <block type="grove_thumb_joystick"></block>
-    </category>
-    <category name="Grove">
-      <block type="grove_led"></block>
-      <block type="grove_button"></block>
-      <block type="grove_relay"></block>
-      <block type="grove_tilt_switch"></block>
-      <block type="grove_piezo_buzzer"></block>
-      <block type="grove_pir_motion_sensor"></block>
-      <block type="grove_line_finder"></block>
-      <block type="grove_rgb_led"></block>
-      <block type="grove_ultrasonic_ranger"></block>
-    </category>
-    <category name="Grove LCD">
-      <block type="grove_serial_lcd_print">
-        <value name="TEXT">
-          <block type="text">
-            <field name="TEXT"></field>
-          </block>
-        </value>
-        <value name="TEXT2">
-          <block type="text">
-            <field name="TEXT"></field>
-          </block>
-        </value>
-        <value name="DELAY_TIME">
-          <block type="math_number">
-            <field name="NUM">1000</field>
-          </block>
-        </value>
-      </block>
-      <block type="grove_serial_lcd_power"></block>
-      <block type="grove_serial_lcd_effect"></block>
-    </category>
-    <category name="Grove Motor">
-      <block type="grove_motor_shield"></block>
-    </category>
-  </xml>
+  <div id = "main_content">
+    <table height="100%" width="100%">
+      <tr>
+        <td>
+          <h1><a href="https://github.com/gasolin/BlocklyDuino/wiki">BlocklyDuino</a> &gt; web-based visual programming editor for arduino</h1>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <table width="100%">
+            <tr id="tabRow" height="1em">
+              <td id="tab_blocks" class="tabon" onclick="tabClick('blocks')">Blocks</td>
+              <td class="tabmin">&nbsp;</td>
+              <!-- td id="tab_javascript" class="taboff" onclick="tabClick(this.id)">JavaScript</td>
+              <td class="tabmin">&nbsp;</td -->
+              <!--td id="tab_dart" class="taboff" onclick="tabClick(this.id)">Dart</td>
+              <td class="tabmin">&nbsp;</td>
+              <td id="tab_python" class="taboff" onclick="tabClick(this.id)">Python</td>
+              <td class="tabmin">&nbsp;</td -->
+              <td id="tab_arduino" class="taboff" onclick="tabClick('arduino')">Arduino</td>
+              <td class="tabmin">&nbsp;</td>
+              <td id="tab_xml" class="taboff" onclick="tabClick('xml');">XML</td>
+              <td class="tabmin">&nbsp;</td>
+              <td class = "progress-container">
+                  <div class="progress-bar" id="myBar"></div>
+              </td>
+              <td class="tabmax">
+                <button type="button" onclick="openHint()">Hint</button>
+                <button type="button" onclick="uploadFunctions()">Upload</button>
+                <button type="button" onclick="resetClick()">Reset</button>
+                <button onclick="discard()">Discard</button>
+                <button onclick="saveCode()">Save Arduino Code</button>
+                <button onclick="save()">Save XML</button>
+                <button id="fakeload">Load XML</button>
+                <input type="file" id="load" style="display: none;"/>
+                <!--button class="launch" onclick="runJS()">Run Program</button-->
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+      <tr>
+        <td height="99%" id="content_area"></td>
+      </tr>
+    </table>
+    <div id="content_blocks" class="content"></div>
+    <textarea id="content_arduino" class="content" readonly wrap="off"></textarea>
+    <textarea id="content_xml" class="content" wrap="off"></textarea>
+
+    <xml id="toolbox" style="display: none">
+      <category name="Logic">
+        <block type="controls_if"></block>
+        <block type="logic_compare"></block>
+        <block type="logic_operation"></block>
+        <block type="logic_negate"></block>
+        <block type="logic_null"></block>
+      </category>
+      <category name="Control">
+        <block type="base_delay">
+          <value name="DELAY_TIME">
+            <block type="math_number">
+              <field name="NUM">1000</field>
+            </block>
+          </value>
+        </block>
+        <block type="controls_for">
+          <value name="FROM">
+            <block type="math_number">
+              <field name="NUM">1</field>
+            </block>
+          </value>
+          <value name="TO">
+            <block type="math_number">
+              <field name="NUM">10</field>
+            </block>
+          </value>
+        </block>
+        <block type="controls_whileUntil"></block>
+      </category>
+      <category name="Math">
+        <block type="math_number"></block>
+        <block type="math_arithmetic"></block>
+        <block type="base_map">
+          <value name="DMAX">
+            <block type="math_number">
+              <field name="NUM">180</field>
+            </block>
+          </value>
+        </block>
+      </category>
+      <category name="Text">
+        <block type="text"></block>
+      </category>
+      <category name="Variables" custom="VARIABLE"></category>
+      <category name="Functions" custom="PROCEDURE"></category>
+      <sep></sep>
+      <category name="Input/Output">
+        <block type="inout_highlow"></block>
+        <block type="inout_digital_write"></block>
+        <block type="inout_digital_read"></block>
+        <block type="inout_analog_write">
+          <value name="NUM">
+            <block type="math_number">
+              <field name="NUM">0</field>
+            </block>
+          </value>
+        </block>
+        <block type="inout_analog_read"></block>
+        <block type="serial_print">
+          <value name="CONTENT">
+            <block type="text">
+              <field name="TEXT"></field>
+            </block>
+          </value>
+        </block>
+        <block type="inout_tone">
+          <value name="NUM">
+            <block type="math_number">
+              <field name="NUM">440</field>
+            </block>
+          </value>
+        </block>
+        <block type="inout_notone"></block>
+        <block type="inout_buildin_led"></block>
+      </category>
+      <category name="Servo">
+        <block type="servo_move">
+          <value name="DEGREE">
+            <block type="math_number">
+              <field name="NUM">0</field>
+            </block>
+          </value>
+        </block>
+        <block type="servo_read_degrees"></block>
+      </category>
+      <category name="Grove Analog">
+        <block type="grove_rotary_angle"></block>
+        <block type="grove_temporature_sensor"></block>
+        <block type="grove_sound_sensor"></block>
+        <block type="grove_thumb_joystick"></block>
+      </category>
+      <category name="Grove">
+        <block type="grove_led"></block>
+        <block type="grove_button"></block>
+        <block type="grove_relay"></block>
+        <block type="grove_tilt_switch"></block>
+        <block type="grove_piezo_buzzer"></block>
+        <block type="grove_pir_motion_sensor"></block>
+        <block type="grove_line_finder"></block>
+        <block type="grove_rgb_led"></block>
+        <block type="grove_ultrasonic_ranger"></block>
+      </category>
+      <category name="Grove LCD">
+        <block type="grove_serial_lcd_print">
+          <value name="TEXT">
+            <block type="text">
+              <field name="TEXT"></field>
+            </block>
+          </value>
+          <value name="TEXT2">
+            <block type="text">
+              <field name="TEXT"></field>
+            </block>
+          </value>
+          <value name="DELAY_TIME">
+            <block type="math_number">
+              <field name="NUM">1000</field>
+            </block>
+          </value>
+        </block>
+        <block type="grove_serial_lcd_power"></block>
+        <block type="grove_serial_lcd_effect"></block>
+      </category>
+      <category name="Grove Motor">
+        <block type="grove_motor_shield"></block>
+      </category>
+    </xml>
+  </div>
 
   <!-- code for popup -->
   <div class="container">
