--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -745,7 +745,8 @@
   </div>
 
   <div class="homescreen-popup" id="buttonPopup">
-    <h3>The goal of the button use case is...</h3>
+    <h3>The button use case</h3>
+    <p>In this use case your task is to </p>
     <button type="button" onclick="backButton()">Back</button>
     <button type="button" onclick="startButton()">Start</button>
   </div>
