--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -742,23 +742,29 @@
   </div>
 
   <div class="homescreen-popup" id="soundPopup">
-    <h3>The sound use case</h3>
-    <p>In this use case your task is to be able to put code together in such a way that the harder you scream into the sound sensor, the more lights turn on.</p>
-    <p>Step 1: connect a variable with the name "soundStateCurrent" to the sound sensor</p>
-    <p>Step 2: if the sound sensor reaches the threshold of 100 or higher, the first light on pin 13 should turn on. After 1 second it should automatically turn off again.</p>
-    <p>Step 3: if the sound sensor reaches the threshold of 400 or higher, the second light on pin 12 should turn on. After 1 second it should automatically turn off again.</p>
-    <p>Step 4: if the sound sensor reaches the threshold of 700 or higher, the second light on pin 11 should turn on. After 1 second it should automatically turn off again.</p>
-    <div class="buttons-container">
-      <button type="button" onclick="backSound()">Back</button>
-      <button type="button" onclick="startSound()">Start</button>
+    <div class="popup-content">
+      <div class="use-case-background">
+        <h3>The sound use case</h3>
+      </div>
+      <p>In this use case your task is to be able to put code together in such a way that the harder you scream into the sound sensor, the more lights turn on.</p>
+      <p><strong>Step 1:</strong> Connect a variable with the name "soundStateCurrent" to the sound sensor</p>
+      <p><strong>Step 2:</strong> If the sound sensor reaches the threshold of 100 or higher, the first light on pin 13 should turn on. After 1 second it should automatically turn off again.</p>
+      <p><strong>Step 3:</strong> If the sound sensor reaches the threshold of 400 or higher, the second light on pin 12 should turn on. After 1 second it should automatically turn off again.</p>
+      <p><strong>Step 4:</strong> If the sound sensor reaches the threshold of 700 or higher, the second light on pin 11 should turn on. After 1 second it should automatically turn off again.</p>
+      <div class="buttons-container">
+        <button type="button" onclick="backSound()">Back</button>
+        <button type="button" onclick="startSound()">Start</button>
+      </div>
     </div>
   </div>
 
   <div class="homescreen-popup" id="buttonPopup">
     <h3>The button use case</h3>
     <p>In this use case your task is to </p>
-    <button type="button" onclick="backButton()">Back</button>
-    <button type="button" onclick="startButton()">Start</button>
+    <div class="buttons-container">
+      <button type="button" onclick="backButton()">Back</button>
+      <button type="button" onclick="startButton()">Start</button>
+    </div>
   </div>
 
 
