also making the button use case look pretty

--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -743,7 +743,7 @@
 
   <div class="homescreen-popup" id="soundPopup">
     <div class="popup-content">
-      <div class="use-case-background">
+      <div class="sound-case-background">
         <h3>The sound use case</h3>
       </div>
       <p>In this use case your task is to be able to put code together in such a way that the harder you scream into the sound sensor, the more lights turn on.</p>
@@ -759,18 +759,19 @@
   </div>
 
   <div class="homescreen-popup" id="buttonPopup">
-    <h3>The button use case</h3>
-    <p>In this use case your task is to </p>
+    <div class="popup-content">
+      <div class="button-case-background">
+        <h3>The button use case</h3>
+      </div>
+      <p>In this use case your task is to be able to put code together in such a way that the longer you hold down the button, the more lights turn on. </p>
+      <p><strong>Step 1:</strong> If the button on pin 7 is held down, the first led on pin 13 should turn on. It should reset after two seconds. Make sure that if the button isnt held down, the led does not turn on.</p>
+      <p><strong>Step 2:</strong> If the button on pin 7 is still held down after two seconds, the second led on pin 12 should turn on. It should reset after two seconds. Make sure that if the button isnt held down, the led does not turn on.</p>
+      <p><strong>Step 3:</strong> If the button on pin 7 is still held down after two seconds, the third led on pin 11 should turn on. It should reset after two seconds. Make sure that if the button isnt held down, the led does not turn on.</p>    
+    </div>
     <div class="buttons-container">
       <button type="button" onclick="backButton()">Back</button>
       <button type="button" onclick="startButton()">Start</button>
     </div>
-    <p>In this use case your task is to be able to put code together in such a way that the longer you hold down the button, the more lights turn on. </p>
-    <p>Step 1: if the button on pin 7 is held down, the first led on pin 13 should turn on. It should reset after two seconds. Make sure that if the button isnt held down, the led does not turn on.</p>
-    <p>Step 2: if the button on pin 7 is still held down after two seconds, the second led on pin 12 should turn on. It should reset after two seconds. Make sure that if the button isnt held down, the led does not turn on.</p>
-    <p>Step 3: if the button on pin 7 is still held down after two seconds, the third led on pin 11 should turn on. It should reset after two seconds. Make sure that if the button isnt held down, the led does not turn on.</p>    
-    <button type="button" onclick="backButton()">Back</button>
-    <button type="button" onclick="startButton()">Start</button>
   </div>
 
 
