--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -794,9 +794,9 @@
       </div>
       <p>In this use case your task is to be able to put code together in such a way that the harder you scream into the sound sensor, the more lights turn on.</p>
       <p><strong>Step 1:</strong> Connect a variable with the name "soundStateCurrent" to the sound sensor</p>
-      <p><strong>Step 2:</strong> If the sound sensor reaches the threshold of 400 or higher, the first light on pin 13 should turn on. After 0.3 second it should automatically turn off again.</p>
-      <p><strong>Step 3:</strong> If the sound sensor reaches the threshold of 440 or higher, the second light on pin 12 should turn on. After 0.3 second it should automatically turn off again.</p>
-      <p><strong>Step 4:</strong> If the sound sensor reaches the threshold of 900 or higher, the third light on pin 11 should turn on. After 0.3 second it should automatically turn off again.</p>
+      <p><strong>Step 2:</strong> If the sound sensor reaches the threshold of 400 or higher, the first light on pin 13 should turn on. After 0.3 seconds it should automatically turn off again.</p>
+      <p><strong>Step 3:</strong> If the sound sensor reaches the threshold of 440 or higher, the second light on pin 12 should turn on. After 0.3 seconds it should automatically turn off again.</p>
+      <p><strong>Step 4:</strong> If the sound sensor reaches the threshold of 900 or higher, the third light on pin 11 should turn on. After 0.3 seconds it should automatically turn off again.</p>
       <p>Use the check button to see if you have completed the steps in the correct way!</p>
       <div class="buttons-container">
         <button type="button" onclick="backSound()">Back</button>
