--- a/blockly/apps/blocklyduino/index.html
+++ b/blockly/apps/blocklyduino/index.html
@@ -684,7 +684,7 @@
       <h3>Hint 1:</h3>
       <h4>You can use a block with if and else to set when the lights should turn on.</h4>
       <button type="button" onclick="CaseTwoHintTwo()">Another hint</button>
-      <button type="button" onclick="closeHintPopupTwo()">Close</button>
+      <button type="button" onclick="closeHintPopupTwo()">Try again!</button>
     </div>
   </div>
 
